--- a/servicios.html
+++ b/servicios.html
@@ -1,75 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="es">
+<head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilos/styles.css" />
-    <link
-      rel="stylesheet"
-    />
-    <title>Weather app</title>
-    <link rel="shortcut icon" href="
-    https://s3.amazonaws.com/shecodesio-production/uploads/files/000/100/250/original/png-transparent-free-content-sunlight-s-text-orange-sunlight-thumbnail-removebg-preview.png?1697169810" type="image/x-icon">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="estilos/stylesweather.css" />
-    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap"
-      rel="stylesheet" />
-      <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-  </head>
-  <body class="weather">
-        <header>
-      <nav>
-        <ul class="menu">
-          <li><a href="mi_perfil.php">Perfil</a></li>
-          <li><a href="plan.html" >Plan</a></li>
-          <li><a href="vuelos.html">Vuelos</a></li>
-          <li><a href="reservas.php">Mis Reservas</a></li>
-          <li><a href="servicios.html" class="active">Servicios</a></li>
-
-
-        </ul>
-      </nav>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+    <title>Traveler Assistant - Clima y Moneda</title>
+</head>
+<body class="weather">
+    <!-- Encabezado principal -->
+    <header>
+        <nav>
+            <ul class="menu">
+                <li><a href="mi_perfil.php">Perfil</a></li>
+                <li><a href="plan.html">Plan</a></li>
+                <li><a href="vuelos.html">Vuelos</a></li>
+                <li><a href="reservas.php">Mis Reservas</a></li>
+                <li><a href="servicios.html" class="active">Servicios</a></li>
+            </ul>
+        </nav>
     </header>
-    <div class="container">
-      <div class="weatherapp">
-        <form id="search-form">
-          <input
-            class="search"
-            type="text"
-            placeholder="  Type a city..."
-            id="search-input"
-          />
-          <button class="btnsearch" value="Search" type="submit">Search</button>
-          <button class="btnsearch current" value="Search" type="button">Current</button>
-        </form>
-        <ul>
-          <li class="city" id="title"></li>
-          <li class="date"></li>
-          <li class="weather"><img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="image" id="icon"><span id="temperature-num"></span> <span class="conv units"><a href=https://www.metric-conversions.org/temperature/celsius-to-fahrenheit.htm class="conv" id="temperature-cel">°C |</a><a href=https://www.metric-conversions.org/temperature/celsius-to-fahrenheit.htm class="conv" id="temperature-far"> °F</a></li></span>
-          <li id="weatherdesc"></li>
-          <li class="info">Humidity: <span class="humidity"></span> %</li>
-          <li class="info" id="info-wind">Wind: <span class="wind"> </span> km/h</li>
-        </ul>
-        <div class="weather-forecast" id="forecast">
+
+    <div class="d-flex">
+        <!-- Barra lateral -->
+        <div id="sidebar" class="sidebar">
+            <h2>Opciones</h2>
+            <input type="text" id="mySearch" onkeyup="filterMenu()" placeholder="Buscar..." class="form-control mb-2">
+            <ul id="menu" class="list-group">
+                <li class="list-group-item"><a href="#" onclick="showSection('weather')">Clima</a></li>
+                <li class="list-group-item"><a href="#" onclick="showSection('currency')">Conversor de Moneda</a></li>
+            </ul>
         </div>
-        <div class="grid-button">
-          <button class="button-search ny">New York</button>
-          <button class="button-search mad">Madrid</button>
-          <button class="button-search lon">London</button>
-          <button class="button-search mex">Mexico City</button>
+
+        <!-- Contenido principal -->
+        <div class="container mt-4" id="content">
+            <!-- Aplicación de Clima -->
+            <div id="weather" class="weatherapp content-section">
+                <h2>Aplicación del Clima</h2>
+                <form id="search-form" class="mb-3">
+                    <input class="search" type="text" placeholder="Type a city..." id="search-input" />
+                    <button class="btnsearch" value="Search" type="submit">Buscar</button>
+                    <button class="btnsearch current" value="Search" type="button">Current</button>
+                </form>
+                <ul>
+                    <li class="city" id="title"></li>
+                    <li class="date"></li>
+                    <li class="weather">
+                        <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="image" id="icon">
+                        <span id="temperature-num"></span>
+                        <span class="conv units"><a href="#" id="temperature-cel">°C |</a><a href="#" id="temperature-far"> °F</a></span>
+                    </li>
+                    <li id="weatherdesc"></li>
+                    <li class="info">Humedad: <span class="humidity"></span> %</li>
+                    <li class="info" id="info-wind">Viento: <span class="wind"> </span> km/h</li>
+                </ul>
+                <div class="weather-forecast" id="forecast"></div>
+                <div class="grid-button">
+                    <button class="button-search ny">New York</button>
+                    <button class="button-search mad">Madrid</button>
+                    <button class="button-search lon">London</button>
+                    <button class="button-search mex">Mexico City</button>
+                </div>
+            </div>
+
+            <div id="currency" class="content-section" style="display: none;">
+              <h2>Convertidor de Moneda</h2>
+              <form id="currencyForm">
+                  <input type="number" id="amount" placeholder="Monto (Ej. 100)" class="form-control mb-2" required />
+                  <input type="text" id="fromCurrency" placeholder="De (Ej. USD)" class="form-control mb-2" required />
+                  <input type="text" id="toCurrency" placeholder="A (Ej. EUR)" class="form-control mb-2" required />
+                  <button type="submit" class="btn btn-primary">Convertir</button>
+              </form>
+              <div id="currencyResultList" class="mt-3">
+                <h5 class="hint">El resultado aparecerá aquí...</h5>
+                <div id="conversionResult" class="result-large"></div>
+            </div>            
+          </div>          
         </div>
-      </div>
-      <footer class="bg-dark text-white text-center py-3 mt-5">
+    </div>
+
+    <footer class="bg-dark text-white text-center py-3 mt-5">
         &copy; 2024 Travel Agent. Todos los derechos reservados.
     </footer>
-    </div>
-  </body>
-  <script src="src/appweather.js"></script>
+
+    <!-- Scripts -->
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="src/appweather.js"></script>
+    <script src="scripts/currency.js"></script>
+    <script>
+        function showSection(section) {
+            document.querySelectorAll('.content-section').forEach(el => el.style.display = 'none');
+            document.getElementById(section).style.display = 'block';
+        }
+
+        function filterMenu() {
+            const filter = document.getElementById('mySearch').value.toUpperCase();
+            const items = document.querySelectorAll('#menu li');
+            items.forEach(item => {
+                const text = item.textContent || item.innerText;
+                item.style.display = text.toUpperCase().includes(filter) ? '' : 'none';
+            });
+        }
+    </script>
+</body>
 </html>
