--- a/login.html
+++ b/login.html
@@ -5,38 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - Travel Agent</title>
     <link rel="stylesheet" href="estilos/styles.css">
-    <link href="../bootstrap/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../bootstrap/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
-    <script src="../bootstrap/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
 </head>
 <body>
-<section class="vh-100" style="background-color: #eee;">
+<section class="vh-100">
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-md-8 col-lg-6 col-xl-4">
-        <div class="card text-black" style="border-radius: 25px;">
-          <div class="card-body p-md-5">
-            <h3 class="text-center fw-bold mb-5">Iniciar Sesión</h3>
+        <div class="card shadow text-black rounded-4">
+          <div class="card-body p-5">
+            <h3 class="text-center fw-bold mb-4 text-primary">Iniciar Sesión</h3>
 
             <form action="validar_login.php" method="POST">
-
-              <div class="form-outline mb-4">
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
                 <input type="email" id="email" name="email" class="form-control" required />
-                <label class="form-label" for="email">Email</label>
               </div>
 
-              <div class="form-outline mb-4">
+              <div class="mb-4">
+                <label for="password" class="form-label">Contraseña</label>
                 <input type="password" id="password" name="password" class="form-control" required />
-                <label class="form-label" for="password">Contraseña</label>
               </div>
 
-                <div class="d-flex flex-column justify-content-center align-items-center mx-4 mb-3">
-                    <button type="submit" class="btn btn-primary btn-lg mb-2">Iniciar Sesión</button>
-                    <button type="button" onclick="window.location.href='registro.html'" class="btn btn-secondary btn-lg">¿No tienes cuenta? Regístrate</button>
-
-                </div>                
-                </div>                
+              <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-primary btn-lg">Iniciar Sesión</button>
+                <button type="button" onclick="window.location.href='registro.html'" class="btn btn-secondary btn-lg">¿No tienes cuenta? Regístrate</button>
               </div>
             </form>
           </div>
@@ -46,6 +40,6 @@
   </div>
 </section>
 
-<script src="../bootstrap/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
