--- a/registro.html
+++ b/registro.html
@@ -4,34 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - Travel Agent</title>
-    <link rel="stylesheet" href="estilos/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
 </head>
-<body>
-<section class="vh-100">
+<body class="bg-light">
+<section class="d-flex align-items-center" style="min-height: 100vh;">
   <div class="container">
-    <div class="row d-flex justify-content-center align-items-center">
-      <div class="col-lg-6 col-md-8">
-        <div class="card shadow p-4">
-          <div class="card-body">
-            <h3 class="text-center fw-bold mb-4 text-primary">Registro</h3>
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-10 col-md-8 col-lg-6">
+        <div class="card shadow border-0 rounded-3">
+          <div class="card-body p-4">
+            <h3 class="text-center fw-bold mb-4 text-primary">Crea tu Cuenta</h3>
 
             <form action="validar_registro.php" method="POST">
-
               <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" id="nombre" name="nombre" class="form-control" required />
+                <input type="text" id="nombre" name="nombre" class="form-control rounded" placeholder="Tu nombre" required />
               </div>
 
               <div class="mb-3">
                 <label for="apellido" class="form-label">Apellido</label>
-                <input type="text" id="apellido" name="apellido" class="form-control" required />
+                <input type="text" id="apellido" name="apellido" class="form-control rounded" placeholder="Tu apellido" required />
               </div>
 
               <div class="mb-3">
                 <label for="usuario" class="form-label">Usuario</label>
-                <input type="text" id="usuario" name="usuario" class="form-control" pattern="[A-Za-z]+" title="Solo se permiten letras" required oninput="validarUsuario()" />
+                <input type="text" id="usuario" name="usuario" class="form-control rounded" pattern="[A-Za-z]+" title="Solo se permiten letras" placeholder="Nombre de usuario" required oninput="validarUsuario()" />
                 <small id="usuarioError" class="text-danger" style="display: none;">El nombre de usuario solo puede contener letras.</small>
               </div>
 
@@ -52,37 +50,37 @@
               </script>
 
               <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" id="email" name="email" class="form-control" required />
+                <label for="email" class="form-label">Correo Electrónico</label>
+                <input type="email" id="email" name="email" class="form-control rounded" placeholder="example@email.com" required />
               </div>
 
               <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" id="password" name="password" class="form-control" required />
+                <input type="password" id="password" name="password" class="form-control rounded" placeholder="Mínimo 8 caracteres" required />
               </div>
 
-              <div class="mb-4">
-                <label for="rol" class="form-label">Selecciona tu Rol</label>
-                <select id="rol" name="rol" class="form-control" required>
+              <div class="mb-3">
+                <label for="rol" class="form-label">Rol</label>
+                <select id="rol" name="rol" class="form-select rounded" required>
+                  <option value="" disabled selected>Selecciona tu rol</option>
                   <option value="cliente">Cliente</option>
                   <option value="administrador">Administrador</option>
                 </select>
               </div>
 
-              <div class="form-check mb-4">
-                <input class="form-check-input" type="checkbox" value="" id="termsCheck" required />
+              <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="termsCheck" required />
                 <label class="form-check-label" for="termsCheck">
                   Acepto los <a href="#">términos y condiciones</a>
                 </label>
               </div>
 
               <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-primary btn-lg">Registrarse</button>
-                <button type="button" onclick="window.location.href='login.html'" class="btn btn-secondary btn-lg">
+                <button type="submit" class="btn btn-primary rounded">Registrarse</button>
+                <button type="button" onclick="window.location.href='login.html'" class="btn btn-outline-secondary rounded">
                   Ya tienes cuenta? Inicia Sesión
                 </button>
               </div>
-
             </form>
           </div>
         </div>
