--- a/login.html
+++ b/login.html
@@ -4,33 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - Travel Agent</title>
-    <link rel="stylesheet" href="estilos/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
 </head>
-<body>
-<section class="vh-100">
-  <div class="container h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-md-8 col-lg-6 col-xl-4">
-        <div class="card shadow text-black rounded-4">
-          <div class="card-body p-5">
+<body class="bg-light">
+<section class="d-flex align-items-center" style="min-height: 100vh;">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-10 col-md-8 col-lg-5">
+        <div class="card shadow border-0 rounded-3">
+          <div class="card-body p-4">
             <h3 class="text-center fw-bold mb-4 text-primary">Iniciar Sesión</h3>
 
             <form action="validar_login.php" method="POST">
               <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" id="email" name="email" class="form-control" required />
+                <label for="email" class="form-label">Correo Electrónico</label>
+                <input type="email" id="email" name="email" class="form-control rounded" placeholder="example@email.com" required />
               </div>
 
               <div class="mb-4">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" id="password" name="password" class="form-control" required />
+                <input type="password" id="password" name="password" class="form-control rounded" placeholder="Tu contraseña" required />
               </div>
 
-              <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-primary btn-lg">Iniciar Sesión</button>
-                <button type="button" onclick="window.location.href='registro.html'" class="btn btn-secondary btn-lg">¿No tienes cuenta? Regístrate</button>
+              <div class="d-grid gap-3">
+                <button type="submit" class="btn btn-primary rounded">Iniciar Sesión</button>
+                <button type="button" onclick="window.location.href='registro.html'" class="btn btn-outline-secondary rounded">
+                  ¿No tienes cuenta? Regístrate
+                </button>
               </div>
             </form>
           </div>
