--- a/destinos.html
+++ b/destinos.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Destinos - Travel Agent</title>
     <link rel="stylesheet" href="estilos/styles.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <nav>
         <ul class="menu">
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="destinos.html"class="active">Destinos</a></li>
+          <li><a href="destinos.html" class="active">Destinos</a></li>
           <li><a href="hoteles.html">Hoteles</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
@@ -20,24 +22,80 @@
 
     <main>
       <h1>Nuestros Destinos</h1>
-      <div class="pill-nav">
-        <ul>
-          <li><a href="destinos/destino_california.html">California</a></li>
-          <li><a href="destinos/destino_canadao.html">Canadá Oeste</a></li>
-          <li><a href="destinos/destino_canadae.html">Canadá Este</a></li>
-          <li><a href="destinos/destino_disney.html">Disney</a></li>
-          <li><a href="destinos/destino_dubai.html">Dubái</a></li>
-          <li><a href="destinos/destino_espana.html">España</a></li>
-          <li><a href="destinos/destino_filipinas.html">Filipinas</a></li>
-          <li><a href="destinos/destino_italia_norte.html">Italia Norte</a></li>
-          <li><a href="destinos/destino_italia_sur.html">Italia Sur</a></li>
-          <li><a href="destinos/destino_japon.html">Japón</a></li>
-          <li><a href="destinos/destino_la_paz.html">La Paz</a></li>
-          <li><a href="destinos/destino_peru.html">Perú</a></li>
-          <li><a href="destinos/destino_portugal.html">Portugal</a></li>
-          <li><a href="destinos/destino_turquia.html">Turquía</a></li>
-        </ul>
+      <div id="destinos-container">
+        <!-- Aquí se generará el contenido dinámico -->
       </div>
     </main>
+
+    <footer>
+      <p>&copy; 2024 Travel Agent</p>
+    </footer>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        // Cargar el XML de destinos
+        fetch("destinos.xml")
+          .then((response) => response.text())
+          .then((data) => {
+            const parser = new DOMParser();
+            const xmlDoc = parser.parseFromString(data, "application/xml");
+            const destinos = xmlDoc.getElementsByTagName("destino");
+            const destinosContainer = document.getElementById("destinos-container");
+
+            // Generar contenido dinámico
+            Array.from(destinos).forEach((destino, index) => {
+              const nombre = destino.querySelector("nombre").textContent;
+              const descripcion = destino.querySelector("descripcion").textContent;
+              const imagenes = destino.querySelectorAll("imagen");
+
+              // Crear contenedor del destino
+              const destinoDiv = document.createElement("div");
+              destinoDiv.classList.add("destino");
+              destinoDiv.innerHTML = `
+                <h2 class="destino-titulo" onclick="toggleDetails(${index})">${nombre}</h2>
+                <div class="destino-detalles" id="destino-${index}" style="display: none;">
+                  <p>${descripcion}</p>
+                  <div class="slideshow-container" id="slideshow-${index}">
+                    ${Array.from(imagenes)
+                      .map(
+                        (img, i) =>
+                          `<div class="mySlides-${index}" style="display: ${
+                            i === 0 ? "block" : "none"
+                          };">
+                            <img src="${img.textContent}" alt="${nombre}" style="width:100%">
+                          </div>`
+                      )
+                      .join("")}
+                    <a class="prev" onclick="plusSlides(${index}, -1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(${index}, 1)">&#10095;</a>
+                  </div>
+                </div>
+              `;
+              destinosContainer.appendChild(destinoDiv);
+            });
+          })
+          .catch((error) => console.error("Error al cargar destinos.xml:", error));
+      });
+
+      // Mostrar/ocultar detalles del destino
+      function toggleDetails(index) {
+        const detalles = document.getElementById(`destino-${index}`);
+        detalles.style.display = detalles.style.display === "none" ? "block" : "none";
+      }
+
+      // Control del slideshow
+      function plusSlides(slideshowIndex, n) {
+        const slides = document.querySelectorAll(`.mySlides-${slideshowIndex}`);
+        let slideIndex = Array.from(slides).findIndex(
+          (slide) => slide.style.display === "block"
+        );
+        slides[slideIndex].style.display = "none";
+        slideIndex = (slideIndex + n + slides.length) % slides.length;
+        slides[slideIndex].style.display = "block";
+      }
+      
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
   </body>
 </html>
