--- a/hoteles.html
+++ b/hoteles.html
@@ -5,109 +5,93 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Cadenas Hoteleras de Lujo</title>
 <link rel="stylesheet" href="estilos/styles.css">
-
 </head>
 <body>
-    
-    <header>
+<header>
     <nav>
         <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="destinos.html">Destinos</a></li>
-            <li><a href="hoteles.html"  class="active" >Hoteles</a></li>
+            <li><a href="hoteles.html" class="active">Hoteles</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
 </header>
 
 <div class="row">
-  <div class="left">
-    <h2>Cadenas Hoteleras</h2>
-    <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Buscar cadena hotelera..." title="Buscar cadena hotelera">
-    <ul id="myMenu">
-      <li><a href="#" onclick="showContent('marriott')">Marriott Bonvoy</a></li>
-      <li><a href="#" onclick="showContent('aman')">Aman Resorts</a></li>
-      <li><a href="#" onclick="showContent('fourSeasons')">Four Seasons Hotels and Resorts</a></li>
-      <li><a href="#" onclick="showContent('leadingHotels')">Leading Hotels of the World</a></li>
-      <li><a href="#" onclick="showContent('accor')">Accor</a></li>
-      <li><a href="#" onclick="showContent('ritzCarlton')">Ritz-Carlton</a></li>
-      <li><a href="#" onclick="showContent('belmond')">Belmond Hotels</a></li>
-      <li><a href="#" onclick="showContent('mandarinOriental')">Mandarin Oriental Hotel Group</a></li>
-      <li><a href="#" onclick="showContent('rosewood')">Rosewood Hotels & Resorts</a></li>
-      <li><a href="#" onclick="showContent('stRegis')">St. Regis Hotels & Resorts</a></li>
-      <li><a href="#" onclick="showContent('sixSenses')">Six Senses Hotels Resorts Spas</a></li>
-      <li><a href="#" onclick="showContent('bulgari')">Bulgari Hotels & Resorts</a></li>
-      <li><a href="#" onclick="showContent('oetker')">Oetker Collection</a></li>
-      <li><a href="#" onclick="showContent('relaisChateaux')">Relais & Châteaux</a></li>
-      <li><a href="#" onclick="showContent('waldorfAstoria')">Waldorf Astoria Hotels & Resorts</a></li>
-      <li><a href="#" onclick="showContent('shangriLa')">Shangri-La Hotels and Resorts</a></li>
-      <li><a href="#" onclick="showContent('peninsula')">The Peninsula Hotels</a></li>
-      <li><a href="#" onclick="showContent('oneOnly')">OneAndOnly Resorts</a></li>
-      <li><a href="#" onclick="showContent('hyatt')">Hyatt Hotels Corporation</a></li>
-      <li><a href="#" onclick="showContent('jumeirah')">Jumeirah Group</a></li>
-    </ul>
-  </div>
-  
-  <div class="right" id="contentArea">
-    <h2>Información de la Cadena Hotelera</h2>
-    <p>Selecciona una cadena hotelera del menú para ver más detalles.</p>
-  </div>
-</div>
+    <div class="left">
+        <h2>Cadenas Hoteleras</h2>
+        <input type="text" id="search" class="form-control mb-3" placeholder="Buscar cadena hotelera...">
+        <ul id="myMenu" class="list-group">
+        </ul>
+    </div>
+
+    <div class="right" id="contentArea">
+      <h2>Información de la Cadena Hotelera</h2>
+      <p>Selecciona una cadena hotelera del menú para ver más detalles.</p>
+  </div>  
 
 <script>
-function myFunction() {
-  var input, filter, ul, li, a, i;
-  input = document.getElementById("mySearch");
-  filter = input.value.toUpperCase();
-  ul = document.getElementById("myMenu");
-  li = ul.getElementsByTagName("li");
-  for (i = 0; i < li.length; i++) {
-    a = li[i].getElementsByTagName("a")[0];
-    if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
-      li[i].style.display = "";
-    } else {
-      li[i].style.display = "none";
+    fetch('datahoteles.xml')
+        .then(response => response.text())
+        .then(data => {
+            const parser = new DOMParser();
+            const xmlDoc = parser.parseFromString(data, 'application/xml');
+            const hoteles = xmlDoc.getElementsByTagName('hotel');
+            const menu = document.getElementById('myMenu');
+
+            menu.innerHTML = '';
+
+            Array.from(hoteles).forEach(hotel => {
+                const id = hotel.querySelector('id').textContent;
+                const nombre = hotel.querySelector('nombre').textContent;
+
+                const li = document.createElement('li');
+                li.innerHTML = `<a href="#" onclick="showContent('${id}')">${nombre}</a>`;
+                li.classList.add('list-group-item');
+                menu.appendChild(li);
+            });
+        })
+        .catch(error => console.error('Error al cargar el archivo XML:', error));
+
+    function showContent(id) {
+        fetch('datahoteles.xml')
+            .then(response => response.text())
+            .then(data => {
+                const parser = new DOMParser();
+                const xmlDoc = parser.parseFromString(data, 'application/xml');
+                const hotel = Array.from(xmlDoc.getElementsByTagName('hotel')).find(h => h.querySelector('id').textContent === id);
+
+                if (hotel) {
+                    const nombre = hotel.querySelector('nombre').textContent;
+                    const descripcion = hotel.querySelector('descripcion').textContent;
+                    const imagen = hotel.querySelector('imagen') ? hotel.querySelector('imagen').textContent : '';
+                    const link = hotel.querySelector('link') ? hotel.querySelector('link').textContent : '#';
+
+                    const contentArea = document.getElementById('contentArea');
+                    contentArea.innerHTML = `
+                        <div>
+                            <h2>${nombre}</h2>
+                            ${imagen ? `<img src="${imagen}" alt="${nombre}">` : ''}
+                            <p>${descripcion}</p>
+                            <a href="${link}" target="_blank" class="btn-registro">Visitar sitio oficial</a>
+                        </div>
+                    `;
+                }
+            })
+            .catch(error => console.error('Error al mostrar contenido:', error));
     }
-  }
-}
 
-// Function to display content based on menu selection
-function showContent(chain) {
-  var contentArea = document.getElementById("contentArea");
-  var content = {
-    marriott: `<h2>Marriott Bonvoy</h2><p>Incluye marcas como Marriott, JW Marriott, Sheraton, Westin, entre otras. Es una de las cadenas hoteleras más grandes del mundo, ofreciendo una experiencia de lujo y confort en cada una de sus propiedades.</p>`,
-    aman: `<h2>Aman Resorts</h2><p>Aman Resorts es sinónimo de exclusividad y serenidad, con propiedades en los lugares más remotos y hermosos del mundo. Cada resort es un refugio privado que ofrece una experiencia de lujo incomparable.</p>`,
-    fourSeasons: `<h2>Four Seasons Hotels and Resorts</h2><p>Four Seasons es reconocido globalmente por su servicio excepcional y atención al detalle. Ofrecen experiencias de lujo en destinos clave alrededor del mundo.</p>`,
-    leadingHotels: `<h2>Leading Hotels of the World</h2><p>Una colección de hoteles de lujo independientes, cada uno con su propio carácter y encanto. Estos hoteles ofrecen experiencias auténticas y memorables en los destinos más codiciados.</p>`,
-    accor: `<h2>Accor</h2><p>Incluye marcas como Raffles, Fairmont, Sofitel, entre otras. Accor es una de las mayores cadenas hoteleras, ofreciendo una variedad de experiencias de lujo alrededor del mundo.</p>`,
-    ritzCarlton: `<h2>Ritz-Carlton</h2><p>Parte de Marriott International, Ritz-Carlton es sinónimo de lujo y elegancia. Cada propiedad ofrece una experiencia única, centrada en el servicio impecable y el confort.</p>`,
-    belmond: `<h2>Belmond Hotels</h2><p>Belmond ofrece experiencias de lujo en hoteles icónicos, trenes y cruceros en todo el mundo. Cada propiedad es única, con un fuerte sentido del lugar y la historia.</p>`,
-    mandarinOriental: `<h2>Mandarin Oriental Hotel Group</h2><p>Mandarin Oriental es conocido por su mezcla de lujo oriental y servicio impecable. Sus propiedades se encuentran en destinos clave en todo el mundo.</p>`,
-    rosewood: `<h2>Rosewood Hotels & Resorts</h2><p>Rosewood ofrece una colección de hoteles de lujo que reflejan la historia y la cultura de sus ubicaciones. Cada propiedad está diseñada para ofrecer una experiencia personalizada y auténtica.</p>`,
-    stRegis: `<h2>St. Regis Hotels & Resorts</h2><p>Parte de Marriott International, St. Regis es conocido por su estilo clásico y servicio Butler. Cada propiedad ofrece una experiencia de lujo única y atemporal.</p>`,
-    sixSenses: `<h2>Six Senses Hotels Resorts Spas</h2><p>Six Senses es sinónimo de bienestar y sostenibilidad, con resorts en destinos exóticos. Ofrecen experiencias de lujo enfocadas en la salud y la conexión con la naturaleza.</p>`,
-    bulgari: `<h2>Bulgari Hotels & Resorts</h2><p>Bulgari Hotels & Resorts combina el lujo de la marca Bulgari con la hospitalidad de clase mundial. Sus propiedades se encuentran en algunos de los destinos más exclusivos del mundo.</p>`,
-    oetker: `<h2>Oetker Collection</h2><p>Incluye propiedades icónicas como Le Bristol Paris y Eden Rock. Oetker Collection es conocido por su elegancia clásica y su servicio excepcional en algunos de los destinos más prestigiosos del mundo.</p>`,
-    relaisChateaux: `<h2>Relais & Châteaux</h2><p>Relais & Châteaux es una asociación global de hoteles y restaurantes únicos. Cada propiedad ofrece una experiencia de lujo que refleja el carácter y la cultura de su ubicación.</p>`,
-    waldorfAstoria: `<h2>Waldorf Astoria Hotels & Resorts</h2><p>Parte de Hilton, Waldorf Astoria es sinónimo de lujo y tradición. Sus propiedades ofrecen una experiencia de lujo atemporal, con un enfoque en el servicio y la hospitalidad.</p>`,
-    shangriLa: `<h2>Shangri-La Hotels and Resorts</h2><p>Shangri-La es conocido por su hospitalidad cálida y acogedora, combinada con el lujo asiático. Sus hoteles ofrecen experiencias únicas en destinos clave en Asia y más allá.</p>`,
-    peninsula: `<h2>The Peninsula Hotels</h2><p>The Peninsula es una cadena de hoteles de lujo conocida por su servicio personalizado y su elegancia atemporal. Cada propiedad ofrece una experiencia de lujo inigualable en ciudades icónicas.</p>`,
-    oneOnly: `<h2>One&Only Resorts</h2><p>One&Only Resorts ofrece experiencias de lujo en algunos de los destinos más espectaculares del mundo. Sus resorts son refugios exclusivos que combinan el lujo con la autenticidad local.</p>`,
-    hyatt: `<h2>Hyatt Hotels Corporation</h2><p>Incluye marcas como Park Hyatt y Andaz. Hyatt ofrece una variedad de experiencias de lujo en destinos clave alrededor del mundo, con un enfoque en el servicio y la calidad.</p>`,
-    jumeirah: `<h2>Jumeirah Group</h2><p>Incluye propiedades icónicas como Burj Al Arab y Jumeirah Beach Hotel. Jumeirah es conocido por su lujo opulento y su servicio excepcional en destinos exclusivos.</p>`
-  };
-  
-  contentArea.innerHTML = content[chain];
-  
-  // Remove 'active' class from all links
-  var links = document.querySelectorAll('#myMenu li a');
-  links.forEach(function(link) {
-    link.classList.remove('active');
-  });
+    // Filtro de búsqueda
+    document.getElementById('search').addEventListener('keyup', function () {
+        const filter = this.value.toUpperCase();
+        const items = document.querySelectorAll('#myMenu li');
 
-  // Add 'active' class to the clicked link
-  event.target.classList.add('active');
-}
+        items.forEach(item => {
+            const text = item.textContent || item.innerText;
+            item.style.display = text.toUpperCase().includes(filter) ? '' : 'none';
+        });
+    });
 </script>
 
 </body>
